# NI-experiment-control

./: .gitignore  LICENSE  README.md
nicompiler_backend/: Cargo.toml  Makefile  build.rs  pyproject.toml
nicompiler_backend/src/: channel.rs  device.rs  experiment.rs  instruction.rs  lib.rs  main.rs  unittest.rs  utils.rs
nicompiler_backend/tests/: integrated_test.rs
niexpctrl/: Debugging.ipynb  Demo 1 - minimal example.ipynb  Demo 2 - 2D parameter sweep.ipynb  Timing tests.ipynb  card.py  channel.py  py_api.py  pyuse.ipynb  streamer.py  tests.ipynb  utils.py
niexpctrl_backend/: Cargo.toml  Makefile  nidaqmx_error.logs  pyproject.toml
niexpctrl_backend/.cargo/: config.toml
niexpctrl_backend/src/: connect_terms.rs  device.rs  experiment.rs  lib.rs  main.rs  nidaqmx.rs  utils.rs  worker_cmd_chan.rs
nistreamer/debug_scripts/: default_value_test.ipynb  empty_channel_error.ipynb  final_keep_val.ipynb  flexible_tick.ipynb  model_subclass_test.ipynb  nidaqmx_error.logs  python_tests.ipynb
nistreamer/demo/: Demo 1 - minimal example.ipynb  Demo 2 - 2D parameter sweep.ipynb
nistreamer/nistreamer/: __init__.py  card.py  channel.py  save_notebook.ipynb  streamer.py  utils.py
nistreamer/nistreamer/card_models/: ni6535.py
nistreamer/nistreamer/proxy/card/: ni6535.py
nistreamer/nistreamer/proxy/chan/: inverted_do.py
nistreamer/test/: Collision check bugs.ipynb  Debugging.ipynb  Final tick handling.ipynb  Stress test.ipynb  Test of virtual collision panics bug fix.ipynb  keep_val bug.ipynb  pyuse.ipynb
