[package]
name = "nicompiler_backend"
version = "0.4.0"
edition = "2021"
resolver = "2"
description = "A backend interface for National Instrument (NI) integration, offering streamlined experimental control systems with Rust's performance and safety guarantees."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nicompiler_backend"
crate-type = ["cdylib", "lib"] # Specify the "lib" to make it usable for other rust libraries

[[bin]]
name = "nicompiler_backend_bin"
path = "src/main.rs"

[[bin]]
name = "unittest"
path = "src/unittest.rs"

[dependencies]
maplit = "1.0.2"
ndarray = "0.15.6"
numpy = "0.19.0"
pyo3 = { version = "0.19.2", features = [ "multiple-pymethods" ] }
regex = "1.9.3"
maturin = { git = "https://github.com/nlyu1/maturin.git", branch = "main" }
indexmap = "2.0.2"