[package]
name = "niexpctrl_backend"
version = "0.1.0"
edition = "2021"
description = "An extension of nicompiler_backend defining streaming behavior on National Instrument (NI) devices."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "niexpctrl_backend"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "niexpctrl_backend_bin"
path = "src/main.rs"

[[bin]]
name = "connect_terms"
path = "src/connect_terms.rs"

[dependencies]
pyo3 = { version = "0.19.2", features = [ "multiple-pymethods" ] }
nicompiler_backend = { path = "../nicompiler_backend" }
regex = "1.9.3"
ndarray = "0.15.6"
maplit = "1.0.2"
libc = "0.2.147"
numpy = "0.19.0"
rayon = "1.7.0"
crossbeam = "0.8.2"
maturin = "1.3.1"
indexmap = "2.0.2"
